# hol

./: .gitignore  README.md  hol.cabal
doc/: axioms.txt  bool.txt
src/: Main.hs  Profile.hs  Test.hs
src/HOL/: AlphaTerm.hs  Const.hs  Conv.hs  Data.hs  Name.hs  OpenTheory.hs  Parse.hs  Print.hs  Rule.hs  Sequent.hs  Size.hs  Subst.hs  Syntax.hs  Term.hs  TermAlpha.hs  TermData.hs  Theory.hs  Thm.hs  Tptp.hs  Type.hs  TypeData.hs  TypeOp.hs  TypeSubst.hs  TypeVar.hs  Util.hs  Var.hs
src/HOL/OpenTheory/: Article.hs  Interpret.hs  Package.hs
test/: bool.int  bool.thy
