name: hol
version: 1.0
category: Logic
synopsis: Higher order logic
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  This package implements a higher order logic kernel.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    containers >= 0.4.2.1 && < 1.0
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    HOL.AlphaTerm
    HOL.Const
    HOL.Data
    HOL.Name
    HOL.Sequent
    HOL.Size
    HOL.Term
    HOL.Type
    HOL.TypeOp
    HOL.TypeVar
    HOL.Var
