name: hol
version: 1.0
category: Logic
synopsis: Higher order logic
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  This package implements a higher order logic kernel.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 1.0,
    containers >= 0.5 && < 0.6,
    pretty >= 1.1 && < 1.2,
    text >= 0.11 && < 0.12
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules:
    HOL.Const
    HOL.Data
    HOL.Name
    HOL.Print
    HOL.Rule
    HOL.Sequent
    HOL.Subst
    HOL.Term
    HOL.TermAlpha
    HOL.TermData
    HOL.Theory
    HOL.Thm
    HOL.Type
    HOL.TypeData
    HOL.TypeOp
    HOL.TypeSubst
    HOL.TypeVar
    HOL.Var
