name: hol
version: 1.0
category: Logic
synopsis: Higher order logic
license: MIT
license-file: LICENSE
cabal-version: >= 1.8.0.2
build-type: Simple
author: Joe Leslie-Hurd <joe@gilith.com>
maintainer: Joe Leslie-Hurd <joe@gilith.com>
description:
  This package implements a higher order logic kernel.

Library
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 0.10,
    containers >= 0.5 && < 0.6,
    pretty >= 1.1 && < 1.2,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4
  hs-source-dirs: src
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto-top
  exposed-modules:
    HOL.Const
    HOL.Data
    HOL.Name
    HOL.Print
    HOL.Rule
    HOL.Sequent
    HOL.Subst
    HOL.Term
    HOL.TermAlpha
    HOL.TermData
    HOL.Theory
    HOL.Thm
    HOL.Type
    HOL.TypeData
    HOL.TypeOp
    HOL.TypeSubst
    HOL.TypeVar
    HOL.Var

test-suite hol-test
  type: exitcode-stdio-1.0
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 0.10,
    containers >= 0.5 && < 0.6,
    pretty >= 1.1 && < 1.2,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4
  hs-source-dirs: src
  ghc-options: -Wall
  main-is: Test.hs

-- Profiling steps:
-- > apt-get install ghc-prof libghc-text-prof libghc-transformers-prof
-- > cabal sandbox init
-- > cabal install --only-dependencies --enable-library-profiling
-- > cabal install --enable-library-profiling --enable-executable-profiling .
-- > opentheory info --article -o base.art base
-- > cabal bench hol-profile
-- > less hol-profile.prof
-- > hp2ps -e8in -c hol-profile.hp
-- > ps2pdf hol-profile.ps
-- > open hol-profile.pdf
benchmark hol-profile
  type: exitcode-stdio-1.0
  build-depends:
    base >= 4.0 && < 5.0,
    bytestring >= 0.9 && < 0.10,
    containers >= 0.5 && < 0.6,
    pretty >= 1.1 && < 1.2,
    text >= 0.11 && < 0.12,
    transformers >= 0.3 && < 0.4
  hs-source-dirs: src
  ghc-options:
    -fprof-auto-top
    "-with-rtsopts=-p -s -h -i0.1"
  main-is: Profile.hs
